--- a/.github/workflows/irene-test.yml
+++ b/.github/workflows/irene-test.yml
@@ -29,6 +29,10 @@ jobs:
       - name: Execute R script
         run: |
           Rscript R/data_load.R
-      - name: Execute R script 2
+      - name: Commit and push changes
         run: |
-          Rscript R/write.R
+          git config --global user.name "agastyawan"
+          git config --global user.email "agastyawan@gmail.com"
+          git add .
+          git commit -m "Write new data"
+          git push
