--- a/.github/workflows/irene-test.yml
+++ b/.github/workflows/irene-test.yml
@@ -26,6 +26,9 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           Rscript -e 'install.packages(c("ggplot2","dplyr","readr","RSQLite"))'
+      - name: Execute R script validation
+        run: |
+          Rscript R/validation.R
       - name: Execute R script
         run: |
           Rscript R/data_load.R
