--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,16 +26,16 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           Rscript -e 'install.packages(c("ggplot2","dplyr","readr","RSQLite"))'
-      - name: Execute R script validation2
+      - name: Check the structure of data
         run: |
           Rscript R/structurevalidation.R
-      - name: Execute R script validation
+      - name: Check the content of data
         run: |
           Rscript R/validation.R
-      - name: Execute R script
+      - name: Appending the data
         run: |
           Rscript R/data_load.R
-      - name: Execute R script Visualisation
+      - name: Visualisation
         run: |
           Rscript R/visualisation.R
       - name: Commit and push changes
