--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install packages
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          Rscript -e 'install.packages(c("ggplot2","dplyr","readr","RSQLite"))'
+          Rscript -e 'install.packages(c("ggplot2","dplyr","readr","RSQLite","lubridate"))'
       - name: Check the structure of data
         run: |
           Rscript R/structurevalidation.R
