--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,7 +4,7 @@ on:
 #  schedule:
 #    - cron: '0 */3 * * *' # Run every 3 hours
   push:
-    branches: [ main ]
+    branches: [ development ]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -50,4 +50,4 @@ jobs:
         uses: ad-m/github-push-action@v0.6.0
         with:
             github_token: ${{ secrets.DM21 }}
-            branch: main
+            branch: development
